[package]
name = "greenie"
version = "0.5.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
repository = "https://github.com/playXE/greenie"
readme = "README.md"
keywords = ["green-threads","green","generators","threads","parallel"]
license = "MIT"
description = "Green threads and coroutines in stable Rust"
[dependencies]
greenie-ctx = {path = "greenie-ctx"}
intrusive-collections = "0.8"
cfg-if = "*"
parking_lot = "*"

[features]
no-atomics = []
default = ["no-atomics"]
