[package]
name = "greenie"
version = "0.5.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
repository = "https://github.com/playXE/greenie"
readme = "README.md"
keywords = ["green-threads","green","generators","threads","parallel"]
license = "MIT"
description = "Green threads and coroutines in stable Rust"
[dependencies]
greenie-proc = {path = "greenie-proc"}
libc = "0.2"
paste = "0.1"
hjul = "0.2"
lazy_static = "1.4"
parking_lot = "0.10"
intrusive-collections = "0.8"
cfg-if = "0.1"
futures = "0.3"

rand = {version = "0.7",optional = true}
num_cpus = {version = "1",optional = true}
scoped_threadpool = {version = "0.1",optional= true}
crossbeam-deque = {version= "0.7",optional = true}
[build-dependencies]
cc = "1"

[features]
atomics = ["rand","num_cpus","scoped_threadpool","crossbeam-deque"]
