[package]
name = "greenie-ctx"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "0.1"
lazy_static = "1.4"
[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","processthreadsapi","synchapi","sysinfoapi"] }
kernel32-sys = "0.2"


[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.66"

[build-dependencies]
cc = "1.0"

[features]
fixedsize-stack = []
default = ["fixedsize-stack"]
use-tsx = []