[package]
name = "greenie"
version = "0.2"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
repository = "https://github.com/playXE/greenie"
readme = "README.md"
keywords = ["green-threads","green","generators","threads","parallel"]
license = "MIT"
description = "Green threads & generators"
[dependencies]
greenie-proc = "0.1"
libc = "0.2"
paste = "0.1"

[build-dependencies]
cc = "*"

[features]
preemptive = []
fifo = []
