[package]
name = "greenie"
version = "0.3.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
repository = "https://github.com/playXE/greenie"
readme = "README.md"
keywords = ["green-threads","green","generators","threads","parallel"]
license = "MIT"
description = "Green threads & generators"
[dependencies]
greenie-proc = "0.2"
libc = "0.2"
paste = "0.1"
hjul = "0.2"
lazy_static = "1.4"
parking_lot = "0.10"
intrusive-collections = "0.8"
[build-dependencies]
cc = "1"

