[package]
name = "greenie-proc"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"
description = "Insert yield points into your code"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
syn = {version = "1", features=["full","fold"]}
quote = "1"

[lib]
proc-macro=true